add swagger response failure
