# docs/swagger.json
@@ -85,6 +85,12 @@
                         "schema": {
                             "$ref": "#/definitions/controller.Presensi"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
@@ -190,6 +196,12 @@
                         "schema": {
                             "$ref": "#/definitions/controller.Presensi"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
